修改ini文件使模块分类

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@
 src_dir = .
 
 # Path to directory for header files.
-include_dir = ./include
+include_dir = .
 
 # Default environments to be processed by pio. Multiple environments are allowed.
 default_envs = debug
@@ -54,7 +54,7 @@ program = main
 build_src_filter = "-<*> +<./src/**/*.c>"
 
 # Extra compiler flags.
-; build_flags =
+build_flags = -Iinclude -Ilib
 
 # RISC-V ISA support. Default is rv32imafc.
 ; board_build.march = rv32imac # Disable floating point
