修改文件，增加注释，增加心跳

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "dht11.h": "c",
-        "board.h": "c"
+        "board.h": "c",
+        "system.h": "c",
+        "sys.h": "c"
     }
 }
