完成框架搭建测试，增加是否定时器判断任务选项

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,11 @@
         "system.h": "c",
         "sys.h": "c",
         "hb_gptimer.h": "c",
-        "task.h": "c"
+        "task.h": "c",
+        "lcd_init.h": "c",
+        "lcd.h": "c",
+        "main.h": "c",
+        "mq135_air_sensor.h": "c",
+        "mq2_fumes_sensor.h": "c"
     }
 }
