完成串口发送接收编写

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,10 @@
         "mq135_air_sensor.h": "c",
         "mq2_fumes_sensor.h": "c",
         "analog_ip.h": "c",
-        "fire_sensor.h": "c"
+        "fire_sensor.h": "c",
+        "beep.h": "c",
+        "relay.h": "c",
+        "step_motor.h": "c",
+        "gui.h": "c"
     }
 }
