画完首页菜单，写出菜单切换

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
         "beep.h": "c",
         "relay.h": "c",
         "step_motor.h": "c",
-        "gui.h": "c"
+        "gui.h": "c",
+        "usart.h": "c"
     }
 }
