--- a/ESP32_MQTT/platformio.ini
+++ b/ESP32_MQTT/platformio.ini
@@ -15,5 +15,5 @@ framework = arduino
 lib_deps = 
 	knolleary/PubSubClient@^2.8
 	bblanchon/ArduinoJson@^7.0.4
-
+	olikraus/U8g2@^2.35.19
 upload_speed = 921600
